# genereg

./: .gitignore  main.py  pyproject.toml
config/: bridge_params.yaml  cust1.yaml  gene_params.yaml  genome_params.yaml  phene_params.yaml  pop_params.yaml  pop_params_evolve.yaml
genereg/: draw.py  organism.py  tune.py  utils.py
genereg/network/: gene.py  genome.py
scripts/: dev_builder.py  dev_evolve.py  dev_genome.py  dev_merg.py  dev_montecarlo.py  dev_pheno.py  dev_tune.py  dev_vecs.py  show_colors.py  test_state_mgmt.py
