[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genereg"
version = "0.1.0"
description = "exploring how living systems change themselves"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["genereg*"]
exclude = ["tests*", "docs*", "scripts*"]
